k8s/base/audit-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-service
  template:
    metadata:
      labels:
        app: audit-service
    spec:
      containers:
        - name: audit-service
          image: audit-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8003
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
